--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ classifiers = [
 ]
 
 dependencies = [
+  "anndata>=0.11",
   "langchain-anthropic>=0.1",
   "langchain-core>=0.2",
   "langchain-google-genai>=1",
