--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,12 +27,14 @@ classifiers = [
 
 dependencies = [
   "anndata>=0.11",
+  "hydra-core>=1.3",
   "langchain-anthropic>=0.1",
   "langchain-core>=0.2",
   "langchain-google-genai>=1",
   "langchain-ollama>=0.1",
   "langchain-openai>=0.1",
   "langgraph>=0.2",
+  "omegaconf>=2.3",
   "openai>=1",
   "pandas>=2",
   "pydantic>=2",
