--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,13 +28,13 @@ classifiers = [
 dependencies = [
   "anndata>=0.11",
   "hydra-core>=1.3",
+  "hydra-joblib-launcher",
   "langchain-anthropic>=0.1",
   "langchain-core>=0.2",
   "langchain-google-genai>=1",
   "langchain-ollama>=0.1",
   "langchain-openai>=0.1",
   "langgraph>=0.2",
-  # Added for benchmark/compare_embeddings.py
   "matplotlib>=3.10",
   "omegaconf>=2.3",
   "openai>=1",
@@ -42,7 +42,7 @@ dependencies = [
   "pydantic>=2",
   "scikit-learn>=1.7",
   "seaborn>=0.13",
-  "sentence-transformers>=5",
+  "sentence-transformers",
   "typer>=0.9",
   "typing-extensions>=4",
 ]
