--- a/experiments/config/summary_comparison.yaml
+++ b/experiments/config/summary_comparison.yaml
@@ -12,12 +12,15 @@ model_source_map:
   openai_4o:
     model: gpt-4o
     source: OpenAI
+  openai_o4_mini:
+    model: o4-mini
+    source: OpenAI
   llama_4_maverick:
     model: llama-4-maverick-17b-128e-instruct-fp8
     source: Lambda
 
 model: ${model_source_map.${model_source_pair}.model}
-temperature: 0.7
+temperature: 1.0
 timeout_seconds: 300
 source: ${model_source_map.${model_source_pair}.source}
 
@@ -26,18 +29,18 @@ cell_name: null
 tool: analyze_vision_scores
 task_type: drug_ranking
 
-custom_data_dir: /Users/rohit/Desktop/tahoe_data
-custom_results_dir: /Users/rohit/Desktop/tahoe_results
+custom_data_dir: /Users/rohit/Desktop/tahoe/tahoe_data
+custom_results_dir: /Users/rohit/Desktop/tahoe/tahoe_results
 
 hydra:
   sweeper:
     params:
-      model_source_pair: choice(llama_4_maverick) # lambda_deepseek, openai_4o,
+      model_source_pair: choice(openai_o4_mini) # lambda_deepseek, openai_4o,
       tool: choice(analyze_vision_scores, analyze_gsea_scores)
       task_type: choice(drug_ranking, moa_ranking)
       drug_name: choice(
-        "8-Hydroxyquinoline",
-        "Chlorhexidine (diacetate)")
+        "8-Hydroxyquinoline")
+        # "Chlorhexidine (diacetate)",
         # "Trifluridine",
         # "Berbamine",
         # "Retinoic acid",
